# thingy-91-nrf9160

./: Cargo.toml  Embed.toml  README.md
.github/workflows/: rust.yml
examples/: blinky.rs
src/: lib.rs
